# nanoclaw

./: .env.example  .gitignore  CLAUDE.md  package-lock.json  package.json  pnpm-lock.yaml  vitest.config.ts
container/: Dockerfile  build.sh  entrypoint.sh
container/mcp-servers/slang-pr-knowledge/: .env-vars  .gitignore  ingest.py  pyproject.toml  server.py
coworkers/: dashboard_slang-fixer.yaml  dashboard_slang-triage.yaml  slang-fixer.yaml  slang-triage.yaml  slang_ci-babysitter.yaml  slang_ci-health.yaml  slang_maintainer.yaml
dashboard/: server.test.ts  server.ts  session-slug.test.ts
docs/: DEBUG_CHECKLIST.md  ON-CALL-RUNBOOK.md  SECURITY.md  SPEC.md  USAGE.md  agent-runner-details.md  api-details.md  architecture-diagram.html  architecture-diagram.md  architecture.md  db-session.md  lego-coworker-workflows.md  slang-coworker-guide.md  v2-template-composition-design.md
groups/: coworker-types.json
scripts/: admin-create-coworker.ts  backfill-sdk-session-routes.ts  init-first-agent.ts  migrate-global-to-shared.ts  migrate-to-lego-templates.ts  migrate-v1-to-v2.ts  rebuild-claude-md.ts  spawn-coworker.sh  validate-templates.ts
setup/: index.ts  local.ts  register.test.ts  register.ts  service.ts
src/: architecture-alignment-dashboard.test.ts  architecture-alignment-slang.test.ts  architecture-alignment.test.ts  behavioral-harness.test.ts  claude-composer-refactor.test.ts  claude-composer-scenarios.dashboard.test.ts  claude-composer-scenarios.slang.test.ts  claude-composer-scenarios.test.ts  claude-composer.test.ts  claude-composer.ts  config.ts  ipc.ts  (+41 more)
(+325 files in other folders)
